Fix chat cut off on iOS with on-screen keyboard open (#362)
* Prep setup

* Attempt with fixed header

* Revert "Attempt with fixed header"

This reverts commit 1b249a232dc02619f2caf3a3136fe1daa9b1ca81.

* PoC with fixed height

* PoC fix

* Fix the issue

* Revert "Prep setup"

This reverts commit 761b7852a507a3c912f8ae30dd7bd98d714a55fc.

--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -40,7 +40,7 @@
 @media screen and (max-width: 480px) {
   .chat {
     position: fixed;
-    top: 0;
+    bottom: 0;
     right: 0;
     height: 100dvh;
     width: 100%;
